syntax = "proto3";
package ununifi.yieldaggregator;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/UnUniFi/chain/x/yieldaggregator/types";

message StrategyWeight {
  uint64 strategy_id = 1;
  string weight = 2 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
}

message Vault {
  uint64 id = 1;
  string denom = 2;
  string owner = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  cosmos.base.v1beta1.Coin owner_deposit = 4 [(gogoproto.nullable) = false];
  string withdraw_commission_rate = 5 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  string withdraw_reserve_rate = 6 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  repeated StrategyWeight strategy_weights = 7 [
    (gogoproto.nullable) = false
  ];
}

message Strategy {
  string denom = 1;
  uint64 id = 2;
  string contract_address = 3;
  string name = 4;
  string git_url = 5;
}

// Deprecated: Just for backward compatibility of query proposals
message ProposalAddStrategy {
  string title            = 1;
  string description      = 2;
  string denom            = 3;
  string contract_address = 4;
  string name             = 5;
  string git_url          = 6;
}
